Using data from application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=hello-service
 spring.zipkin.baseUrl: http://localhost:9411
 spring.sleuth.sampler.percentage: 1
+
+
+service2.url=http://localhost:8082
