Working with metric

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,12 @@ spring.application.name=hello-service
 spring.zipkin.baseUrl: http://localhost:9411
 spring.sleuth.sampler.percentage: 1
 
-
+#Bad
 service2.url=http://localhost:8082
+
+#Better
+#service2.url=${SERVICE2_URL}
+
+
+management.endpoints.jmx.exposure.include=*
+management.endpoints.web.exposure.include=*
